--- a/analysisdl.ipynb
+++ b/analysisdl.ipynb
@@ -122,7 +122,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv(\"bjweather/dldata.csv\")\n",
+    "data = pd.read_csv(\"data_spiders/dldata.csv\")\n",
     "data['yyyy'] = data['date'].apply(lambda x : x.split(\"-\")[0])\n",
     "data['mm'] = data['date'].apply(lambda x : x.split(\"-\")[1])\n",
     "data['dd'] = data['date'].apply(lambda x : x.split(\"-\")[2])\n",
